--- a/client/src/scss/Helper.scss
+++ b/client/src/scss/Helper.scss
@@ -20,6 +20,24 @@ a:hover {
 	background: rgba(0, 0, 0, 0.7);
 }
 
+.modal-dialog {
+	max-width: 1000px;
+	justify-content: space-between;
+
+	.modal-body {
+		padding: 1.4rem;
+
+		.d-flex {
+			& > div:first-child {
+				flex: 1;
+			}
+			& > div:nth-child(2) {
+				flex: 1;
+			}
+		}
+	}
+}
+
 .calendar-info-1,
 .calendar-info-2 {
 	.list-group-item:hover {
