--- a/client/src/scss/_smallerScreen.scss
+++ b/client/src/scss/_smallerScreen.scss
@@ -1,16 +1,9 @@
 @media (max-width: 1270px) {
-	// #root > div {
-	// 	width: fit-content;
-	// }
-
 	#channelModal > div {
 		max-width: 760px;
 	}
 
-	.create-mapping,
-	.create-calendar {
-		.form-control {
-			width: 250px;
-		}
+	.modal-dialog {
+		max-width: 750px;
 	}
 }
